--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
   "dependencies": {
     "JSONStream": "^1.3.5",
     "cross-spawn": "6.0.5",
-    "event-stream": "^4.0.1",
-    "readline-transform": "^0.9.0",
+    "event-stream": "4.0.1",
+    "readline-transform": "0.9.0",
     "semver": "^6.0.0",
     "yargs": "12.0.5"
   },
